# public/swagger.json
@@ -53,6 +53,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"slug": {
+										"type": "string"
+									},
 									"image2": {
 										"type": "string"
 									},
@@ -82,6 +85,7 @@
 									}
 								},
 								"required": [
+									"slug",
 									"image2",
 									"image1",
 									"role",
@@ -144,6 +148,37 @@
 					{
 						"in": "path",
 						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/Player/slug/{slug}": {
+			"get": {
+				"operationId": "GetBySlug",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Player"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "slug",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -625,6 +660,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"slug": {
+										"type": "string"
+									},
 									"image2": {
 										"type": "string"
 									},
@@ -642,6 +680,7 @@
 									}
 								},
 								"required": [
+									"slug",
 									"image2",
 									"image1",
 									"teamType",
@@ -731,6 +770,37 @@
 					{
 						"in": "query",
 						"name": "teamType",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/Team/slug/{slug}": {
+			"get": {
+				"operationId": "GetBySlug",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Team"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "slug",
 						"required": true,
 						"schema": {
 							"type": "string"
