# src/controllers/TeamController.ts
@@ -87,6 +87,20 @@ export default class TeamController {
     }
   }
 
+  @Get("/slug/{slug}")
+  public async getBySlug(slug: string): Promise<JsonObject> {
+    try {
+      const data = await TeamModel.findOne({ slug: slug });
+      if (!data) {
+        throw new Error('Not Found');
+      }
+      return { data: data };
+    } catch (error) {
+      console.error(error);
+      return { error: 'Resource not found' };
+    }
+  }
+
   @Patch("/update")
   public async update(@Body() body: { id: string; name: string; description: string; teamType: string }): Promise<JsonObject> {
     try {
