# src/routes/TeamRoutes.ts
@@ -37,6 +37,13 @@ router.get("/getTeamsByType", async (req: Request, res: Response) => {
   }
 });
 
+router.get("/slug/:slug", async (req: Request, res: Response) => {
+  const { slug } = req.params;
+  const result = await controller.getBySlug(slug);
+  res.send(result);
+});
+
+
 router.patch("/update", async (req: Request, res: Response) => {
   const response = await controller.update(req.body)
 
